--- a/.editorconfig
+++ b/.editorconfig
@@ -7,7 +7,7 @@ indent_style = tab
 indent_size = 2
 end_of_line = lf
 trim_trailing_whitespace = true
-insert_final_newline = true
+insert_final_newline = false
 
 [*.js]
 quote_type = single
