--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
 	},
 	"devDependencies": {
 		"sass": "^1.68.0",
+		"stylelint": "^15.11.0",
+		"stylelint-config-rational-order": "^0.1.2",
+		"stylelint-config-standard-scss": "^11.0.0",
+		"stylelint-order": "^6.0.3",
 		"vite": "^4.4.5"
 	},
 	"dependencies": {
