--- a/package.json
+++ b/package.json
@@ -3,12 +3,20 @@
 	"private": true,
 	"version": "0.0.0",
 	"type": "module",
+	"browserslist": [
+		"defaults",
+		"not IE 11"
+	],
 	"scripts": {
 		"dev": "vite --open",
 		"build": "vite build",
 		"preview": "vite preview"
 	},
 	"devDependencies": {
+		"@vitejs/plugin-legacy": "^4.1.1",
+		"autoprefixer": "^10.4.16",
+		"postcss": "^8.4.31",
+		"postcss-sort-media-queries": "^5.2.0",
 		"sass": "^1.68.0",
 		"stylelint": "^15.11.0",
 		"stylelint-config-rational-order": "^0.1.2",
@@ -21,5 +29,8 @@
 		"navigo": "^8.11.1",
 		"normalize.css": "^8.0.1",
 		"swiper": "^10.3.1"
+	},
+	"engines": {
+		"node": ""
 	}
 }
